{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 47,
  "lineage": "fa8d8caf-5699-2202-37f4-ae40804f2af6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08466a70eb20fab44",
            "arn": "arn:aws:ec2:ap-south-1:756501293726:elastic-ip/eipalloc-08466a70eb20fab44",
            "association_id": "eipassoc-0f782d686f4b66df9",
            "domain": "vpc",
            "id": "eipalloc-08466a70eb20fab44",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02b7dc75d43a96c64",
            "private_dns": "ip-10-120-1-112.ap-south-1.compute.internal",
            "private_ip": "10.120.1.112",
            "public_dns": "ec2-13-206-40-231.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.40.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-nat-eip"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-nat-eip",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:internet-gateway/igw-018ed3abdf997e651",
            "id": "igw-018ed3abdf997e651",
            "owner_id": "756501293726",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-igw"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-igw",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            },
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08466a70eb20fab44",
            "association_id": "eipassoc-0f782d686f4b66df9",
            "connectivity_type": "public",
            "id": "nat-07d9bc2cd4af0b3dd",
            "network_interface_id": "eni-02b7dc75d43a96c64",
            "private_ip": "10.120.1.112",
            "public_ip": "13.206.40.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7e29d28ba3db51f",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-nat"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-nat",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:route-table/rtb-02265c932dd9c8b79",
            "id": "rtb-02265c932dd9c8b79",
            "owner_id": "756501293726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d9bc2cd4af0b3dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudpulse-cnapp-eks-private-rt"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-private-rt",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:route-table/rtb-0c09a9042b06ff4ef",
            "id": "rtb-0c09a9042b06ff4ef",
            "owner_id": "756501293726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018ed3abdf997e651",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudpulse-cnapp-eks-public-rt"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-public-rt",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0878294241c1f078d",
            "route_table_id": "rtb-02265c932dd9c8b79",
            "subnet_id": "subnet-0d9b2f8559f17e8e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a9f4b91e13688d0",
            "route_table_id": "rtb-02265c932dd9c8b79",
            "subnet_id": "subnet-0422149a7b8f36981"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18fea4b05a66875",
            "route_table_id": "rtb-0c09a9042b06ff4ef",
            "subnet_id": "subnet-0a7e29d28ba3db51f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4f8d1d5e4cd0a6",
            "route_table_id": "rtb-0c09a9042b06ff4ef",
            "subnet_id": "subnet-008781fa04c16af1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:security-group/sg-07c068215a51c1ead",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c068215a51c1ead",
            "ingress": [],
            "name": "cloudpulse-cnapp-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "756501293726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudpulse-cnapp-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-cluster-sg",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:subnet/subnet-0d9b2f8559f17e8e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.120.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9b2f8559f17e8e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756501293726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-private-0",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-private-0",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:subnet/subnet-0422149a7b8f36981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.120.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422149a7b8f36981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756501293726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-private-1",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-private-1",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:subnet/subnet-0a7e29d28ba3db51f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.120.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7e29d28ba3db51f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756501293726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-public-0",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-public-0",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:subnet/subnet-008781fa04c16af1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.120.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008781fa04c16af1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756501293726",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-public-1",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-public-1",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase",
              "kubernetes.io/cluster/cloudpulse-cnapp-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ded1ddec8c82dd30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:756501293726:vpc/vpc-0ded1ddec8c82dd30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-0ae11c00829068a80",
            "default_route_table_id": "rtb-0aa629ab8493fe304",
            "default_security_group_id": "sg-04004fe35a44fb4fc",
            "dhcp_options_id": "dopt-0a889db7646718678",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ded1ddec8c82dd30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa629ab8493fe304",
            "owner_id": "756501293726",
            "tags": {
              "Name": "cloudpulse-cnapp-eks-vpc"
            },
            "tags_all": {
              "Environment": "Production-Demo",
              "ManagedBy": "Terraform",
              "Name": "cloudpulse-cnapp-eks-vpc",
              "Platform": "Cortex-Cloud-SecOps",
              "Project": "CloudPulse-CNAPP-Showcase"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}